# pairs-trading-backtester

./: README.md  main.py  market_data_collector.py  pairs_trader.py  pyproject.toml  test_pairs_trader.py
testdata/: AAPL_MSFT_prices.csv  CVX_XOM_prices.csv  JPM_GS_prices.csv  KO_PEP_prices.csv
