[tool.poetry]
name = "pairs-trading-backtester"
version = "0.1.0"
description = ""
authors = ["Charles Weill <c@weill.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.41.1"
yfinance = "^0.2.51"
pandas = "^2.2.3"
numpy = "^2.2.1"
plotly = "^5.24.1"
statsmodels = "^0.14.4"
black = "^24.10.0"
isort = "^5.13.2"
watchdog = "^6.0.0"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
